Version finale du JS pour le redimensionnement des colonnes Correction CSS sur les sites syndiqués ("#extra ul ul li a") -->rajout d'un overflow:hidden
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@11832 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/soyezcreateurs_net/plugins_1.9.2/plugins/_soyezcreateurs/stylessoyezcreateurs.css
+++ b/soyezcreateurs_net/plugins_1.9.2/plugins/_soyezcreateurs/stylessoyezcreateurs.css
@@ -1495,6 +1495,7 @@ sub.dateevenement {
 #extra ul ul li a {
 	margin: 1px 0 0 0;
 	padding: 0 0 0 15px;
+	overflow: hidden;
 }
 
 #citations {
